--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,7 @@ font-weight: 700;
 font-size: 16px;
 line-height: 18px;
 border: none;
+height: 48px;
 width: 100%;
 margin-top: 24px;
 margin-bottom: 36px;
