--- a/styles.css
+++ b/styles.css
@@ -1,98 +1,133 @@
-*{ 
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body{
+body {
     background-color: #E5E5E5;
 }
-.conteiner{
+
+.conteiner {
     width: 375px;
     background-color: #f4f4f4;
     margin: 0 auto;
     margin-top: 100px;
 }
-h1{
+
+h1 {
     font-style: normal;
-font-weight: 400;
-font-size: 24px;
-line-height: 18px;
-color: #F4F4F4;
-text-align: center;
-padding-top: 22px;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 18px;
+    color: #F4F4F4;
+    text-align: center;
+    padding-top: 22px;
 
 }
 
-header{
+header {
     background-color: #1B83E2;
     height: 66px;
 }
-main{
+
+main {
     padding: 24px;
 }
 
-label{
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 18px;
-color: #777777;
+label {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    color: #777777;
 }
 
-select{
+select {
 
-background: #FFFFFF;
-border: 1px solid #BBBBBB;
-border-radius: 4px;
-height: 48px;
-display: block;
-width: 100%;
-cursor: pointer;
-outline: none;
-appearance: none;
-padding-left: 16px;
-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.15);
-margin-top: 6px;
-margin-bottom: 24px;
-
-}
-input{
-background: #FFFFFF;
-border: 1px solid #BBBBBB;
-border-radius: 4px;
-height: 48px;
-display: block;
-width: 100%;
-outline: none;
-padding-left: 16px;
-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.15);
-font-size: 18px;
-
+    background: #FFFFFF;
+    border: 1px solid #BBBBBB;
+    border-radius: 4px;
+    height: 48px;
+    display: block;
+    width: 100%;
+    cursor: pointer;
+    outline: none;
+    appearance: none;
+    padding-left: 16px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.15);
+    margin-top: 6px;
+    margin-bottom: 24px;
 
 }
 
-button{
-background: #1B83E2;
-border-radius: 25px;
-cursor: pointer;
-color: #F4F4F4;
-font-style: normal;
-font-weight: 700;
-font-size: 16px;
-line-height: 18px;
-border: none;
-height: 48px;
-width: 100%;
-margin-top: 24px;
-margin-bottom: 36px;
+input {
+    background: #FFFFFF;
+    border: 1px solid #BBBBBB;
+    border-radius: 4px;
+    height: 48px;
+    display: block;
+    width: 100%;
+    outline: none;
+    padding-left: 16px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.15);
+    font-size: 18px;
+
+
 }
 
-button:hover{
+button {
+    background: #1B83E2;
+    border-radius: 25px;
+    cursor: pointer;
+    color: #F4F4F4;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 18px;
+    border: none;
+    height: 48px;
+    width: 100%;
+    margin-top: 24px;
+    margin-bottom: 36px;
+}
+
+button:hover {
     opacity: 0.9;
 }
 
-button:active{
+button:active {
     opacity: 0.7;
+}
+
+
+section {
+    border: 1px solid #1B83E2;
+    border-radius: 4px;
+}
+
+.caixa {
+    text-align: center;
+    padding: 10px;
+}
+
+.paragrafo {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    color: #777777;
+}
+
+.valor {
+    color: #1B83E2;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.seta {
+    margin: 15px auto;
+    display: block;
+
 }
