--- a/styles.css
+++ b/styles.css
@@ -1,96 +1,99 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
     background-color: #E5E5E5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
-.conteiner {
+.container {
     width: 375px;
-    background-color: #f4f4f4;
-    margin: 0 auto;
-    margin-top: 100px;
+    background-color: #F4F4F4;
+}
+
+header {
+    background: #1B83E2;
+    height: 66px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 h1 {
     font-style: normal;
-    font-weight: 400;
+    font-weight: normal;
     font-size: 24px;
     line-height: 18px;
     color: #F4F4F4;
-    text-align: center;
-    padding-top: 22px;
-
+    
 }
 
-header {
-    background-color: #1B83E2;
-    height: 66px;
+label {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 18px;
+    color: #777777;
+    display: block;
+    margin-bottom: 6px;
 }
 
 main {
     padding: 24px;
 }
 
-label {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 18px;
-    color: #777777;
-}
-
 select {
-
+    display: block;
     background: #FFFFFF;
     border: 1px solid #BBBBBB;
     border-radius: 4px;
-    height: 48px;
-    display: block;
-    width: 100%;
-    cursor: pointer;
-    outline: none;
-    appearance: none;
-    padding-left: 16px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.15);
-    margin-top: 6px;
+    width: 100%;
+    height: 48px;
+    padding-left: 16px;
     margin-bottom: 24px;
-
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 18px;
+    color: #555555;
 }
 
 input {
+    display: block;
     background: #FFFFFF;
     border: 1px solid #BBBBBB;
     border-radius: 4px;
-    height: 48px;
-    display: block;
-    width: 100%;
-    outline: none;
-    padding-left: 16px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.15);
-    font-size: 18px;
-
-
+    width: 100%;
+    height: 48px;
+    padding-left: 16px;
+    margin-bottom: 24px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 18px;
+    color: #555555;
 }
 
 button {
     background: #1B83E2;
-    border-radius: 25px;
-    cursor: pointer;
-    color: #F4F4F4;
     font-style: normal;
-    font-weight: 700;
+    font-weight: normal;
     font-size: 16px;
     line-height: 18px;
-    border: none;
-    height: 48px;
+    border-radius: 25px;
+    color: #F4F4F4;
     width: 100%;
-    margin-top: 24px;
-    margin-bottom: 36px;
+    height: 48px;
+    border: none;
 }
 
 button:hover {
@@ -101,33 +104,38 @@ button:active {
     opacity: 0.7;
 }
 
-
 section {
     border: 1px solid #1B83E2;
     border-radius: 4px;
+    margin-top: 36px;
+    margin-bottom: 32px;
+    padding: 12px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
 }
 
-.caixa {
-    text-align: center;
-    padding: 10px;
+.section-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2px;
 }
 
-.paragrafo {
+.subtitleName {
     font-style: normal;
-    font-weight: 400;
+    font-weight: normal;
     font-size: 14px;
     line-height: 18px;
     color: #777777;
 }
 
-.valor {
-    color: #1B83E2;
-    font-weight: 700;
+.currency {
+    font-style: normal;
+    font-weight: bold;
     font-size: 20px;
-}
-
-.seta {
-    margin: 15px auto;
-    display: block;
-
+    line-height: 18px;
+    color: #1B83E2;
 }
